--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -1,6 +1,6 @@
 <h1>Customers</h1>
 
-<p>This page shows the customers of the animal shelter.</p>
+<p>This page shows the customers of the animal shelter, along with their ID, age, and profession.</p>
 
 <table>
   <tr>
@@ -16,5 +16,6 @@
     <th><%= customer.age %></th>
     <th><%= customer.profession %></th>
   </tr>
+
   <% end %>
 </table>
