adds create buttons to edit erb pages

--- a/views/animals/index.erb
+++ b/views/animals/index.erb
@@ -21,3 +21,7 @@
   </tr>
   <% end %>
 </table>
+
+<br>
+
+<button type="button" name="button"><a href="/animals/new">Add a new pet to the shelter</a>
