--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -16,8 +16,9 @@
     <td><%= customer.age %></td>
     <td><%= customer.profession %></td>
     <td><button type="button" name="button"><a href="/customers/<% customer.id %>/delete">Delete</a></button></td>
-
   </tr>
 
   <% end %>
 </table>
+<hr>
+<button type="button" name="button"><a href="/customers/new">Add a new customer to the alliance</a>
