--- a/views/index.erb
+++ b/views/index.erb
@@ -8,5 +8,10 @@
 
 <h1>Hello and welcome!</h1>
 
+<p>The Rebel Alliance has enlisted the help of the Scottish Animal Shelter to help house the numerous non-sentient life-forms displaced and/or orphaned during the galactic conflict.<p>
+
+<p>Use this app to help keep track of our customers' details and information on the animals we are housing.</p>
+
+<p>May the porgs be with you!</p>
   </body>
 </html>
