--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,9 @@
   <nav>
     <ul>
       <li>
+        <a href="index.erb">Home</a>
+      </li>
+      <li>
         <a href="/animals">Animals</a>
       </li>
       <li>
@@ -17,6 +20,7 @@
       </li>
     </ul>
   </nav>
+
   <section id="content">
   <%= yield %>
   </section>
