--- a/views/customers/new.erb
+++ b/views/customers/new.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form-el">
-      <input type="submit" value="Shelter Animal"/>
+      <input type="submit" value="Add new owner to the Alliance"/>
     </div>
 
   </div>
