adds edit pages for customer and animal in views

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
   <nav>
     <ul>
       <li>
-        <a href="index.erb">Home</a>
+        <a href="/index">Home</a>
       </li>
       <li>
         <a href="/animals">Animals</a>
