--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -15,9 +15,12 @@
     <td><%= customer.id %></td>
     <td><%= customer.age %></td>
     <td><%= customer.profession %></td>
+    <td><form action="/customers/<%= customer.id %>/edit" method="post">
+      <input type="submit" value="Edit details"></td>
     <td><form action="/customers/<%= customer.id %>/delete" method="post">
       <input type="submit" value="Delete">
     </form></td>
+
   </tr>
 
   <% end %>
