--- a/views/animals/new.erb
+++ b/views/animals/new.erb
@@ -1,4 +1,4 @@
-<h2>Shelter to a new animal</h2>
+<h2>Register a new animal</h2>
 <form method="POST" action="/animals">
   <div class="form-wrapper">
 
@@ -9,7 +9,7 @@
 
     <div class="form-el">
       <label for="age">Type:</label>
-      <input type="number" name="age" id="age"/>
+      <input type="text" name="type" id="type"/>
     </div>
 
     <div class="form-el">
@@ -25,6 +25,8 @@
     <div class="form-el">
       <input type="submit" value="Shelter Animal"/>
     </div>
+
+    <button type="button" name="button"><a href="/customers/new"></a>
 
   </div>
 </form>
