corrected font color in customers views table

--- a/views/customers/edit.erb
+++ b/views/customers/edit.erb
@@ -1,24 +1,24 @@
-<h2>Edit customer details</h2>
+<h1>Edit customer details</h1>
 <form method="POST" action="/animals">
   <div class="form-wrapper">
 
     <div class="form-el">
-      <label for="name">Name:</label>
+      <label for="name"  style="color:white;">Name:</label>
       <input type="text" name="name" id="name"/>
     </div>
 
     <div class="form-el">
-      <label for="age">Type:</label>
+      <label for="age" style="color:white;">Type:</label>
       <input type="number" name="age" id="age"/>
     </div>
 
     <div class="form-el">
-      <label for="admission_date">Admission Date:</label>
+      <label for="admission_date" style="color:white;">Admission Date:</label>
       <input type="text" name="admission_date" id="admission_date"/>
     </div>
 
     <div class="form-el">
-      <label for="adoptable">Ready for adoption?</label>
+      <label for="adoptable" style="color:white;">Ready for adoption?</label>
       <input type="text" name="adoptable" id="adoptable"/>
     </div>
 
