--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -1,14 +1,14 @@
-<h2>Edit animal information</h2>
+<h1>Edit animal information</h1>
 <form method="POST" action="/animals">
   <div class="form-wrapper">
 
     <div class="form-el">
-      <label for="name">Name:</label>
+      <label for="name" style="color:white;">Name:</label>
       <input type="text" name="name" id="name"/>
     </div>
 
     <div class="form-el">
-      <label for="age">Type:</label>
+      <label for="age"  style="color:white;">Type:</label>
       <input type="number" name="age" id="age"/>
     </div>
 
