--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -13,16 +13,16 @@
     </div>
 
     <div class="form-el">
-      <label for="admission_date">Admission Date:</label>
+      <label for="admission_date"  style="color:white;">Admission Date:</label>
       <input type="text" name="admission_date" id="admission_date"/>
     </div>
 
     <div class="form-el">
-      <label for="adoptable">Ready for adoption?</label>
+      <label for="adoptable"  style="color:white;">Ready for adoption?</label>
       <input type="text" name="adoptable" id="adoptable"/>
     </div>
 
-    <div class="form-el">
+    <div class="form-el"  style="color:white;">
       <input type="submit" value="Shelter Animal"/>
     </div>
 
