corrects issues with colors

--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -8,21 +8,21 @@
     </div>
 
     <div class="form-el">
-      <label for="age"  style="color:white;">Type:</label>
-      <input type="number" name="age" id="age"/>
+      <label for="type" style="color:white;">Type:</label>
+      <input type="text" name="type" id="type"/>
     </div>
 
     <div class="form-el">
-      <label for="admission_date"  style="color:white;">Admission Date:</label>
+      <label for="admission_date" style="color:white;">Admission Date:</label>
       <input type="text" name="admission_date" id="admission_date"/>
     </div>
 
     <div class="form-el">
-      <label for="adoptable"  style="color:white;">Ready for adoption?</label>
+      <label for="adoptable" style="color:white;">Ready for adoption?</label>
       <input type="text" name="adoptable" id="adoptable"/>
     </div>
 
-    <div class="form-el"  style="color:white;">
+    <div class="form-el">
       <input type="submit" value="Shelter Animal"/>
     </div>
 
