--- a/views/animals/show.erb
+++ b/views/animals/show.erb
@@ -5,5 +5,5 @@
 <p><%= @animal.adoptable %></p>
 <p><%= @animal.type %></p>
 <% if @animal.customer_id != nil %>
-<p><%= @animal.customer_id.name %></p>
+<p><%= animal.customer.name %></p>
 <% end %>
