--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -11,7 +11,7 @@
   </tr>
   <% for customer in @customers %>
   <tr>
-    <td><%= customer.name %></td>
+    <td><a href="/customers/<%= customer.id %>"><%= customer.name %></a></td>
     <td><%= customer.id %></td>
     <td><%= customer.age %></td>
     <td><%= customer.profession %></td>
