progress made with adoption

--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -3,22 +3,22 @@
   <div class="form-wrapper">
 
     <div class="form-el">
-      <label for="name" style="color:white;">Name:</label>
+      <label for="name" style="color:white;" value="<%= animal.name %>">Name:</label>
       <input type="text" name="name" id="name"/>
     </div>
 
     <div class="form-el">
-      <label for="type" style="color:white;">Type:</label>
+      <label for="type" style="color:white;" value="<%= animal.type %>">Type:</label>
       <input type="text" name="type" id="type"/>
     </div>
 
     <div class="form-el">
-      <label for="admission_date" style="color:white;">Admission Date:</label>
+      <label for="admission_date" style="color:white;" value="<%= animal.admission_date %>">Admission Date:</label>
       <input type="text" name="admission_date" id="admission_date"/>
     </div>
 
     <div class="form-el">
-      <label for="adoptable" style="color:white;">Ready for adoption?</label>
+      <label for="adoptable" style="color:white;" value="<%= animal.adoptable %>">Ready for adoption?</label>
       <input type="text" name="adoptable" id="adoptable"/>
     </div>
 
