--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -1,17 +1,21 @@
 <h1><%= @customer.name %></h1>
-<p><%= @customer.name %></p>
-<p><%= @customer.age %></p>
-<p><%= @customer.profession %></p>
-<p><%= @customer.id %></p>
+<p>Use this to see <%= @customer.name %>'s personal information, their pets, and to assign them an animal as a pet.</p>
+<p>Age: <%= @customer.age %></p>
+<p>Profession: <%= @customer.profession %></p>
+<p>Pets:</p>
+<ul>
+  <% for animal in @customer.animal %>
+  <li><%= animal.name %><li>
+    <% end %>
+  </ul>
 
-<form action="/customers/<%= @customer.id %>/adopt" method="post" >
+   <form action="/customers/<%= @customer.id %>/adopt" method="post" > %>
 
-  <select>
-    <% for animal in @animals %>
-  <option value="<% animal.id %>"><%= animal.name %></option>
-  <% end %>
-</select>
+    <select>
 
-<button type="submit" name="Adopt"></button>
 
-</form>
+    </select>
+
+    <button type="submit" name="Adopt">Assign a new pet to <%= @customer.name %></button>
+
+  </form>
