--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -3,18 +3,21 @@
 <p>Age: <%= @customer.age %></p>
 <p>Profession: <%= @customer.profession %></p>
 <p>Pets:</p>
-<ul>
-  <% for animal in @customer.animal %>
-  <li><%= animal.name %><li>
+<ul style="color:white;">
+  <% for animal in @customer.animals %>
+  <li ><%= animal.name %><li>
     <% end %>
   </ul>
 
-   <form action="/customers/<%= @customer.id %>/adopt" method="post" > %>
-
-    <select>
 
 
-    </select>
+  <form action="/customers/<%= @customer.id %>/adopt" method="post" >
+
+<select name="animal_id">
+  <% for animal in @animals %>
+<option value="<%= animal.id %>"><%= animal.name %></option>
+<% end %>
+</select>
 
     <button type="submit" name="Adopt">Assign a new pet to <%= @customer.name %></button>
 
