--- a/views/animals/index.erb
+++ b/views/animals/index.erb
@@ -22,7 +22,7 @@
       <% end %></td>
     <td><a href="/animals/<%=  animal.id %>/edit">Edit animal info</a></td>
     <td><form action="/animals/<%= animal.id %>/delete" method="post">
-      <input type="submit" value="Delete"></input></td>
+      <input type="submit" value="Delete"></input></form><td>
   </tr>
   <% end %>
 </table>
